<resources>
    <string name="app_name">AppContacts</string>
    <string name="fab_content_description">TODO</string>
    <string name="Name">Nom</string>
    <string name="Phone">Num de téléphone</string>
    <string name="Email">Email</string>
    <string name="Note">Note</string>
    <string name="search">Search</string>
    <string name="deleteall">DeleteAll</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="contacts">Contacts</string>
    <string name="groupes_de_contacts">Groupes de contacts</string>
    <string name="group_name">Nom de groupe</string>
    <string name="group_description">Description de groupe</string>
    <string name="addTime">Temps d\'ajout</string>
    <string name="updateTime">Temps de modification</string>
</resources>